# lotto_number

./: .gitignore  CLAUDE.md
.github/workflows/: server_deploy.yml  weekly_pension_recommendation.yml  weekly_pension_result_check.yml  weekly_recommendation.yml  (+1 more)
lotto-doctor/: .gitignore  CLAUDE.md  README.md  pyproject.toml
lotto-doctor/.claude/: settings.json
lotto-doctor/.devcontainer/: devcontainer.json
lotto-doctor/.github/workflows/: daily_recommendation.yml  server_deploy.yml  weekly_recommendation.yml  weekly_result_check.yml
lotto-doctor/config/: default.yaml
lotto-doctor/reports/: crowd_calibration.md
lotto-doctor/scripts/: analyze.py  backtest.py  bot_listener.py  check_result.py  collect_lotto.py  generate_weekly.py  send_weekly.py
lotto-doctor/src/lotto_doctor/: __init__.py  analyzer.py  backtester.py  cli.py  collector.py  config.py  coverage.py  crowd_calibration.py  database.py  ev_monitor.py  evaluator.py  features.py  filters.py  generator.py  models.py  pension_analyzer.py  pension_collector.py  pension_database.py  pension_evaluator.py  pension_generator.py  pension_models.py  pension_news_collector.py  pension_telegram.py  popularity.py  portfolio.py  reflection.py  reporter.py  scorer.py  telegram_bot.py  utils.py  validator.py
lotto-doctor/tests/: test_backtester.py  test_coverage.py  test_crowd_calibration.py  test_database.py  test_ev_monitor.py  test_evaluator.py  test_filters.py  test_generator.py  test_pension.py  test_pension_news_collector.py  test_popularity.py  test_reflection.py  test_telegram_message.py  test_validator.py
